testing stateless change

--- a/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/flow-designer/ui/canvas/items/process-group/edit-process-group/edit-process-group.component.html
+++ b/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/flow-designer/ui/canvas/items/process-group/edit-process-group/edit-process-group.component.html
@@ -137,6 +137,17 @@
                                         [readonly]="readonly" />
                                 </mat-form-field>
                             </div>
+                            <div>
+                                <mat-form-field>
+                                    <mat-label>Stateless Content Repository Path</mat-label>
+                                    <input
+                                        matInput
+                                        formControlName="statelessContentRepositoryPath"
+                                        type="text"
+                                        placeholder="/opt/nifi/stateless-content"
+                                        [readonly]="readonly" />
+                                </mat-form-field>
+                            </div>
                         }
                         <div>
                             <mat-form-field>
