--- a/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/flow-designer/ui/canvas/items/process-group/edit-process-group/edit-process-group.component.html
+++ b/nifi-frontend/src/main/frontend/apps/nifi/src/app/pages/flow-designer/ui/canvas/items/process-group/edit-process-group/edit-process-group.component.html
@@ -117,7 +117,7 @@
                         @if (editProcessGroupForm.get('executionEngine')?.value === STATELESS) {
                             <div>
                                 <mat-form-field>
-                                    <mat-label>Max Concurrent Tasks</mat-label>
+                                    <mat-label>Max Concurrent Tasks derp</mat-label>
                                     <input
                                         matInput
                                         formControlName="maxConcurrentTasks"
@@ -129,7 +129,7 @@
                             </div>
                             <div>
                                 <mat-form-field>
-                                    <mat-label>Stateless Flow Timeout</mat-label>
+                                    <mat-label>Stateless Flow Timeout derp</mat-label>
                                     <input
                                         matInput
                                         formControlName="statelessFlowTimeout"
